Modification du lien de github pour s'ouvrir dans un autre onglet

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
                 <div id="logoReseau">
 
-                    <p id="logoReseaux"><a href="https://tweetdeck.twitter.com/"><img src="twitter.png" alt="twitter"></a> <a href="https://subhi-dajava.github.io/"><img src="github.png" alt="github"></a> <a href="#"><img src="linkedin.png" alt="linkedin"></a> <a href="#"><img src="instagram.png" alt="instagram"> </a> <a href="#"><img src="facebook.png" alt="facebook"></a> </p>
+                    <p id="logoReseaux"><a href="https://tweetdeck.twitter.com/"><img src="twitter.png" alt="twitter"></a> <a href="https://subhi-dajava.github.io/" target="_blank"><img src="github.png" alt="github"></a> <a href="#"><img src="linkedin.png" alt="linkedin"></a> <a href="#"><img src="instagram.png" alt="instagram"> </a> <a href="#"><img src="facebook.png" alt="facebook"></a> </p>
                 </div>
 
             </footer>
