Une petite modification d'une de Section compétence.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             <li>Excel</li>
                             <li>Word</li>
                             <li>Ptt</li>
-                            <li>HTML, CSS3, Java (notions)</li>
+                            <li>HTML5, CSS3, Java, Git et GitHub (notions)</li>
                         </ul>
                     <p>En suivant les cours d'Openclassrooms, j'aurai des compétences en Développement d’Applications Java.</p>
 
