--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8" />
+        
+
         <title>MonPremierSiteWetP1+DA</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,7 +33,7 @@
                 </div>
 
                 <div id="maPhoto">
-                    <img class="monImage" src="subhi.jpg" alt="photoPerso">
+                    <img class="monImage" src="moiCV.png" alt="photoPerso">
                 </div>
 
             </header>
