--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/> <!--par rapport le matériel-->
 
         <title>MonPremierSiteWetP1+DA</title>
         <link rel="stylesheet" type="text/css" href="style.css">
