--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
                 <div id="top">
 
                     <div id="titre">
-                        <h1>Subhi Yarmuhemmed</h1>
+                        <h1>Prenom Nom</h1>
                         <p>Développeur d'Application Java</p>
                     </div>
 
                     <div class="discrip">
-                        <p>Bonjour, je suis Subhi, Développeur Java<br>
-                        bientôt diplômé chez OpenClassrooms.</p>
+                        <p>Bonjour, je suis Prenom, Développeur <br>
+                        bientôt diplômé chez Open.</p>
                     </div>
 
                 </div>
@@ -54,7 +54,7 @@
                             <li>Ptt</li>
                             <li>HTML5, CSS3, Java, Git et GitHub (notions)</li>
                         </ul>
-                    <p>En suivant les cours d'Openclassrooms, j'aurai des compétences en Développement d’Applications Java.</p>
+                    <p>En suivant les cours d'Openclassrooms, j'aurai des compétences en Développement .</p>
 
                     <p>Je suis passionné par le développement le front-end et le back-end. Je travaillerai énormément, suffisamment et efficacement
                     avec de bonnes méthodes et avec un état d'esprit positif et partager plus ce que j'aurai avec mon entourage.</p>
