--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
                     <div id="titre">
                         <h1>Prenom Nom</h1>
-                        <p>Développeur d'Application Java</p>
+                        <p>Développeur</p>
                     </div>
 
                     <div class="discrip">
