--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             <li>Ptt</li>
                             <li>HTML5, CSS3, Java, Git et GitHub (notions)</li>
                         </ul>
-                    <p>En suivant les cours d'Openclassrooms, j'aurai des compétences en Développement .</p>
+                    <p>En suivant les cours d'Open, j'aurai des compétences en Développement .</p>
 
                     <p>Je suis passionné par le développement le front-end et le back-end. Je travaillerai énormément, suffisamment et efficacement
                     avec de bonnes méthodes et avec un état d'esprit positif et partager plus ce que j'aurai avec mon entourage.</p>
