--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </div>
 
                 <div id="maPhoto">
-                    <img class="monImage" src="moiCV.png" alt="photoPerso">
+                    <img class="monImage" src="myPhoto.png" alt="photoPerso">
                 </div>
 
             </header>
