update projects page

--- a/projects.html
+++ b/projects.html
@@ -92,10 +92,9 @@
                             l'architecture technique d'une application à l'aide de diagramme UML |
                             Construire une application web java avec le pattern repository | Réaliser un
                             schéma de conception de la base de données de l’application | Implémenter
-                            Spring Security (<a
+                            Spring Security | Implémenter Thymeleaf (<a
                                     href="https://github.com/Subhi-DaJava/PayMyBuddy_Projet6/tree/dev"
-                                    class="link link-underline-opacity-25 link-offset-2 link-underline-primary">lien du
-                                projet</a>)</p>
+                                    class="link link-underline-opacity-25 link-offset-2 link-underline-primary">lien du projet</a>)</p>
                     </div>
                 </div>
             </div>
@@ -103,7 +102,8 @@
     </div>
 
     <footer class="text-center mt-3">
-        <a href="index.html" class="link link-underline-opacity-25 link-offset-2 link-underline-primary fs-2">Go Back to Home Page</a>
+        <a href="index.html" class="link link-underline-opacity-25 link-offset-2 link-underline-primary fs-2">Go Back to
+            Home Page</a>
     </footer>
 </div>
 </body>
