--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
         <div>
             <div class="row mt-5">
                 <div class="col">
-                    <h2>Projet Mediscreen [fictif]</h2>
+                    <h2>Projet Mediscreen</h2>
                     <a href="https://github.com/Subhi-DaJava/Mediscreen-OC-P9"
                        class="link link-underline-opacity-25 link-offset-2 link-underline-primary">
                         <img src="logoMediscreen.jpg" alt="logo_Mediscreen" style="width:20%">
@@ -37,7 +37,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <h2>Projet Trip-Master [fictif]</h2>
+                    <h2>Projet Trip-Master</h2>
                     <a href="https://gitlab.com/Subhi-Java/TourGuide/-/tree/develop?ref_type=heads"
                        class="link link-underline-opacity-25 link-offset-2 link-underline-primary">
                         <img src="logoTripMaster.jpg" alt="logo_TripMaster" style="width:20%">
@@ -60,7 +60,7 @@
             </div>
             <div class="row mt-3">
                 <div class="col">
-                    <h2>Projet Poseidon-Inc [fictif]</h2>
+                    <h2>Projet Poseidon-Inc</h2>
                     <a href="https://github.com/Subhi-DaJava/JavaDA_PROJECT7_RESTAPI/tree/develop_MySQL"
                        class="link link-underline-opacity-25 link-offset-2 link-underline-primary">
                         <img src="logoPoseidon.png" alt="logo_Poseidon" style="width:20%">
@@ -79,7 +79,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <h2>Projet PayMyBuddy [fictif]</h2>
+                    <h2>Projet PayMyBuddy</h2>
                     <a href="https://github.com/Subhi-DaJava/PayMyBuddy_Projet6/tree/dev"
                        class="link link-underline-opacity-25 link-offset-2 link-underline-primary">
                         <img src="paymybuddy.png" alt="logo_PayMyBuddy" style="width:20%">
