--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
           rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
           crossorigin="anonymous">
+
+                    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-G2Y236K27T"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-G2Y236K27T');
+</script>      
 </head>
 <body>
 <div class="container text-center bg-success" style="--bs-bg-opacity: .5;">
@@ -102,7 +112,7 @@
     </div>
 
     <footer class="text-center mt-3">
-        <a href="index.html" class="link link-underline-opacity-25 link-offset-2 link-underline-primary fs-2">Go Back to
+        <a href="https://subhi-dajava.github.io" class="link link-underline-opacity-25 link-offset-2 link-underline-primary fs-2">Go Back to
             Home Page</a>
     </footer>
 </div>
